# paraphrx

./: .gitignore  README.md  categories.md  gpu_smoke.slurm  gpu_test.py  run_gpu_test.slurm  run_inference.sh
a_data/preproc/rephras/: Cargo.toml  add_scenarios.rs  generate_paraphrases.rs  generate_paraphrases_modelchoice.rs  generate_paraphrases_skipfail.rs  generate_polite_paraphrases.rs
a_data/preproc/rephras/generate_buildup/: generate_paraphrases_modelchoice.rs  generate_paraphrases_successful_no-log.rs  gsm8k_paraphrases.rs  mmlu_paraphrases.rs
a_data/preproc/sanity_alpaca/: Cargo.toml
a_data/preproc/sanity_alpaca/src/: main.rs  sample_to_json.rs
c_assess_inf/: Cargo.toml
c_assess_inf/hpc/: assess_loop.sh  assess_loop_alpaca.sh  assess_loop_alpaca_g9.sh  assess_loop_gsm8k.sh  assess_loop_gsm8k_g2.sh  assess_loop_gsm8k_g9.sh  assess_loop_gsm8k_q.sh  assess_loop_mmlu.sh  assess_loop_mmlu_g9.sh  assess_loop_mmlu_q.sh  assess_results.pbs  assess_results_loop.pbs  assess_results_robust.pbs  assess_results_robust_longinstruct.pbs  commands.md  inference_run.pbs  inference_run_alpaca.slurm  inference_run_alpaca500.pbs  inference_run_alpaca_q2.pbs  inference_run_alpaca_q2.slurm  inference_run_gsm8k.pbs  inference_run_gsm8k.slurm  inference_run_gsm8k_q.slurm  inference_run_gsm8k_q2.slurm  inference_run_mmlu.pbs  inference_run_mmlu.slurm  inference_run_mmlu_q.slurm  inference_run_mmlu_q2.slurm  inference_runmmlu.slurm  polling_loop.sh  polling_loop_afterB.sh  polling_loop_lang4.sh  polling_loop_patchmmlu.sh  polling_loop_specichar2.sh  polling_loop_spst.sh  polling_loop_spstalpaca.sh  polling_loop_thirdwait.sh  polling_loop_tone123.sh  polling_loop_tone45.sh  polling_loop_voice12345.sh  (+37 more)
c_assess_inf/output/: results_2.json  results_all.json  results_all_eval.json  unstruct_results.json
c_assess_inf/output/alpaca/: tone1_slice2_infresults.json  voice1_slice1_infresults.json  voice1_slice2_infresults.json  voice1_slice3_infresults.json  voice1_slice4_infresults.json  xs_syntax1_slice5_infresults.json
c_assess_inf/output/alpaca/gemma-1-2b-it/: tone1_slice1_infresults.json
c_assess_inf/output/alpaca/gemma-2-2b-it/: obstruction1_slice1_infresults.json  obstruction1_slice2_infresults.json  obstruction1_slice3_infresults.json  obstruction1_slice5_infresults.json  style1_slice2_infresults.json  style1_slice4_infresults.json  syntax1_slice3_infresults.json  syntax1_slice5_infresults.json
c_assess_inf/output/alpaca_answer_scores/: gemma-2-9b-it.json
c_assess_inf/output/alpaca_answer_scores_500/: Qwen1.5-1.8B.json
c_assess_inf/output/alpaca_answer_scores_500/Qwen1.5-1.8B/: boundary.json  context.json  extra_a.json  extra_b.json  language.json  length.json  obstruction.json  special_char.json  style.json  syntax.json  tone.json  voice.json
c_assess_inf/output/alpaca_answer_scores_500/gemma-2-2b-it/: extra_a.json  syntax.json  tone.json  voice.json
c_assess_inf/output/alpaca_former/gemma-1-2b-it/: syntax1_slice1_infresults.json  tone1_slice3_infresults.json  tone1_slice4_infresults.json  tone1_slice5_infresults.json  voice1_slice5_infresults.json
c_assess_inf/output/alpaca_former/gemma-2-2b-it/: language1_slice3_infresults.json  language1_slice4_infresults.json  language1_slice5_infresults.json  obstruction1_slice4_infresults.json  style1_slice3_infresults.json  style1_slice5_infresults.json  syntax1_slice2_infresults.json  syntax1_slice4_infresults.json
c_assess_inf/output/alpaca_newphras/Qwen1.5-1.8B/: boundary_slice1_infresults.json  boundaryice2_infresult.json  (+50 more)
c_assess_inf/src/: assess_results.rs  assess_results_old-metrics.rs  assess_results_robust.rs  assess_results_robust_longinstruct.rs  drop_keys.rs  inference.py  inference_alpaca_gsm8k.py  inference_mmlu.py  inference_run.py  inference_run_betterbatch.py  inference_run_mmlu.py  inference_run_sped.py  inference_run_sped_2.py  inference_run_sped_3.py  inference_singlestore.py  merge_instructs.rs  merge_issues.rs  merge_jsons.rs  merge_random_ids.rs  phrx_equivalence_score.rs  results_asses.rs  results_assess.rs  results_assess_mmlu.rs  results_assess_mmlu_waits.rs  results_assess_noID.rs  results_find_issues.rs  results_patch.rs  results_patch_mmlu.rs  run_inference.py  run_inference_batched.py  run_inference_batched_type.py  run_inference_flexible.py  run_inference_former.py  sort_merge_ids.rs  split_jsons.rs  split_prompt_counts.rs  split_random_ids.rs  summarise_scores.rs  summarise_scores_old-metrics.rs
c_assess_inf/src_2/: merge_jsons.rs  results_patch.rs  split_jsons.rs  split_prompt_counts.rs
e_eval/: Cargo.toml
e_eval/src/: check_scores.rs  compose_top_occurences.rs  compose_top_occurences_across_metrics.rs  compose_top_prompts.rs  perplexity.rs
f_finetune/: Cargo.toml  README.md
f_finetune/hpc/: a_test_ft_all_data_all_layers.slurm  finetuning_bucket1.slurm  finetuning_buckets2.slurm  finetuning_buckets3.slurm  ft_all_data.slurm  ft_all_data_all_layers.slurm  ft_all_data_specific_layers.slurm  ft_buckets_1-1.slurm  ft_buckets_1-2.slurm  ft_buckets_1-3.slurm  ft_buckets_1-4.slurm  ft_buckets_1-5.slurm  ft_inf.slurm  ft_inf_alldata.slurm  ft_inf_alldata_specific_layers.slurm  ft_inf_buckets_1-1.slurm  ft_inf_buckets_1-2.slurm  ft_inf_buckets_1-3.slurm  ft_inf_buckets_1-4.slurm  ft_inf_buckets_1-5.slurm  ft_inference_alpaca.slurm  ft_sl1_buckets_1-1.slurm  ft_sl2_buckets_1-2.slurm  ft_sl3_buckets_1-3.slurm  ft_sl4_buckets_1-4.slurm  ft_sl5_buckets_1-5.slurm  gemma_download.slurm  xft_inf_buckets_1-4_running.slurm
f_finetune/outputs/ft_inf_scores/: bucket1.json  buckets2.json  buckets5.json
f_finetune/src/: check_inf.py  finetuning.py  finetuning_specific_layers.py  finetuning_talkative.py  ft_inference_alpaca.py  ft_inference_alpaca_gsm8k.py  gemma_download.py  gemma_download.rs  gemma_download.sh  prepare_all_data.rs  prepare_data.rs  prepare_exhaustive_data.rs  score_results.rs  split_train_test.rs  tmux_ftscore_all_layers.sh  tmux_ftscore_threestart.sh  tmux_ftscore_twostart.sh  tmux_score_starter.sh  tmux_score_starter_free.sh  tmux_score_starter_free_one.sh  xgemma_download.rs
(+753 files in other folders)
