[package]
name = "c_assess_inf"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "assess_results"       # cargo run --bin assess_results
path = "src/assess_results.rs"

[[bin]]
name = "assess_results_robust"
path = "src/assess_results_robust.rs"
#path = "src/assess_results.rs"

[[bin]]
name = "assess_results_robust_longinstruct"
path = "src/assess_results_robust_longinstruct.rs"

[[bin]]
name = "summarise_scores"     # cargo run --bin summarise_scores
path = "src/summarise_scores.rs"


# Shared dependencies for both binaries
[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
indicatif  = "0.17"
#phf        = { version = "0.11", features = ["macros"] }
#reqwest    = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
simplelog = "0.12"
chrono     = { version = "0.4", default-features = false, features = ["clock"] }
log        = "0.4"
