[package]
name = "e_eval"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compose_top_prompts"
path = "src/compose_top_prompts.rs"

[[bin]]
name = "compose_top_occurences"
path = "src/compose_top_occurences.rs"

[[bin]]
name = "compose_top_occurences_across_metrics"
path = "src/compose_top_occurences_across_metrics.rs"

[[bin]]
name = "perplexity"
path = "src/perplexity.rs"

[dependencies]
anyhow     = "1"
clap = { version = "4.5", features = ["derive"] }
indicatif  = "0.17"
#phf        = { version = "0.11", features = ["macros"] }
#reqwest    = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
simplelog = "0.12"
chrono     = { version = "0.4", default-features = false, features = ["clock"] }
log        = "0.4"
regex = "1.11.1"
itertools = "0.14.0"
csv = "1.1"
rust_tokenizers = "8.1"
rust-bert      = { version = "0.23", default-features = false, features = ["download-libtorch"] }
