[package]
name    = "f_finetune"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow      = "1"
clap        = { version = "4.5", features = ["derive"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
hf-hub      = "0.4"
simplelog = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"

[[bin]]
name = "gemma_download"
path = "src/gemma_download.rs"

[[bin]]
name = "prepare_data"
path = "src/prepare_data.rs"
