[package]
name    = "alpaca_polite_gen"
version = "0.1.0"
edition = "2021"

# tell Cargo “my binary is that file”
[[bin]]
name = "alpaca_polite_gen"
path = "generate_paraphrases.rs"

[dependencies]
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
indicatif   = "0.17"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
phf = { version = "0.11", features = ["macros"] }
