[package]
name    = "alpaca_polite_gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_paraphrases"
path = "generate_paraphrases.rs"

[[bin]]
name = "generate_paraphrases_modelchoice"
path = "generate_paraphrases_modelchoice.rs"

[dependencies]
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
indicatif   = "0.17"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
phf = { version = "0.11", features = ["macros"] }
chrono    = "0.4"
time      = { version = "0.3", features = ["macros"] }
simplelog = "0.12"
time = { version = "0.3", features = ["macros"] }
log       = "0.4"
