[package]
name = "alpaca_sanity"
version = "0.1.0"
edition = "2021"

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
uuid         = { version = "1.4", features = ["v4"] }
anyhow       = "1.0"
indexmap     = { version = "2", features = ["serde"] }

[[bin]]
name = "sample_to_json"
path = "src/sample_to_json.rs"
